@@ -1,6 +1,11 @@
 \name{NEWS}
 \title{News for Package \pkg{GGIRread}}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
+\section{Changes in version 0.0.2 (release date:??-??-2023)}{
+    \itemize{
+      \item Now able to handle ID in GPS that is missing in Accelerometer data
+    }
+}
 \section{Changes in version 0.0.1 (release date:08-09-2023)}{
     \itemize{
       \item First release
